# Fire_Smoke_Detector_ESP32

./: .gitignore  CMakeLists.txt  README.md
Edge-AI/: dataset.yaml  fire_smoke_model.tflite  run_model.py  run_tflite.py  train.py
Edge-AI/models/: #1_RUN_EXPORT_PT-TO-H.bat  export_pt-to-h.py
Edge-AI/src/: Filter_webcam.py  Mobile_Webcam_steam.py  config.py  fire_detector.py  main.py  run_model.py  train_model.py
components/tflite-micro/: CMakeLists.txt
main/: CMakeLists.txt  camera.cpp  camera.h  detector.cpp  detector.h  main.cpp  model_data.cpp  model_data.h  shared_state.cpp  shared_state.h  storage.cpp  storage.h  web_server.cpp  web_server.h  wifi_station.cpp  wifi_station.h
